--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="skills">
               <h3 class="skills__header">Skills</h3>
               <p class="skills__text">
-                Sleep, eat, more sleep, meow, mrrr, purr.
+                HTML, CSS, JS, React, C++, C#, Git and a bit of SQL & MongoDB
               </p>
             </div>
           </div>
@@ -187,25 +187,25 @@
                 <div class="experiences__company">
                   <div class="experiences__company-header">
                     <span class="experiences__company-header-durability"
-                      >For whole my life</span
+                      >Dec 2021 - Present</span
                     >
                     <h3 class="experiences__company-header-name">
-                      BinaryStudio
+                      DevsData LLC
                     </h3>
                   </div>
 
                   <div class="experiences__company-project">
                     <span class="experiences__company-project-role"
-                      >Binary Studio Cat</span
+                      >Junior Frontend Developer</span
                     >
                     <h3 class="experiences__company-project-name">
-                      Hooman project
+                      Internal website/some client projects
                     </h3>
                     <ul class="experiences__company-project-responsibilities">
-                      <li>Supported hoomans</li>
-                      <li>Slept all the time</li>
-                      <li>Lied on the keyboard</li>
-                      <li>Watched my hoomans working</li>
+                      <li>Maintained website</li>
+                      <li>Added new features</li>
+                      <li>Fixed bugs</li>
+                      <li>Created websites for clients</li>
                     </ul>
                   </div>
                 </div>
@@ -217,27 +217,25 @@
                   <div class="additional-info__education-university">
                     <span
                       class="additional-info__education-university-durability"
-                      >2021</span
+                      >2021 - Present</span
                     >
                     <h3
                       class="additional-info__education-university-speciality"
                     >
-                      Cat track
+                      Software Development
                     </h3>
                     <p class="additional-info__education-university-name">
-                      Binary Studio Academy
+                      IT-Step Academy
                     </p>
                   </div>
                 </div>
 
                 <div class="additional-info__languages">
                   <h3 class="additional-info__languages-header">Languages</h3>
-                  <p class="additional-info__languages-item">Meow dialect</p>
+                  <p class="additional-info__languages-item">English C1</p>
+                  <p class="additional-info__languages-item">Polish B2</p>
                   <p class="additional-info__languages-item">
-                    Ukrainian (understand)
-                  </p>
-                  <p class="additional-info__languages-item">
-                    English (don't understand)
+                    Ukrainian (Native)
                   </p>
                 </div>
               </div>
