implemented the theme change functionality

--- a/index.html
+++ b/index.html
@@ -15,6 +15,154 @@
   </head>
   <body>
     <main>
+      <div class="theme-change-wrapper">
+        <label
+          for="my-modal-2"
+          class="btn md:btn-md sm:btn-sm xs:btn-xs btn-primary modal-button mr-4"
+        >
+          Choose your color
+        </label>
+        <input type="checkbox" id="my-modal-2" class="modal-toggle" />
+        <div class="modal">
+          <div class="modal-box">
+            <button
+              data-set-theme="dark"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🌚 dark
+            </button>
+            <button
+              data-set-theme="light"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🌝 light
+            </button>
+            <button
+              data-set-theme="emerald"
+              class="btn btn-outline btn-primary m-3"
+            >
+              ✳️ emerald
+            </button>
+            <button
+              data-set-theme="bumblebee"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🐝 bumblebee
+            </button>
+            <button
+              data-set-theme="corporate"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🏢 corporate
+            </button>
+            <button
+              data-set-theme="synthwave"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🌃 synthwave
+            </button>
+            <button
+              data-set-theme="retro"
+              class="btn btn-outline btn-primary m-3"
+            >
+              👴 retro
+            </button>
+            <button
+              data-set-theme="valentine"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🌸 valentine
+            </button>
+            <button
+              data-set-theme="garden"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🌷 garden
+            </button>
+            <button
+              data-set-theme="lofi"
+              class="btn btn-outline btn-primary m-3"
+            >
+              👓 lofi
+            </button>
+            <button
+              data-set-theme="pastel"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🖍 pastel
+            </button>
+            <button
+              data-set-theme="wireframe"
+              class="btn btn-outline btn-primary m-3"
+            >
+              📝 wireframe
+            </button>
+            <button
+              data-set-theme="black"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🏴 black
+            </button>
+            <button
+              data-set-theme="cmyk"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🖨 cmyk
+            </button>
+            <button
+              data-set-theme="cupcake"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🧁 Cupcake
+            </button>
+            <button
+              data-set-theme="dracula"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🧛‍♂️ dracula
+            </button>
+            <button
+              data-set-theme="cyberpunk"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🤖 cyberpunk
+            </button>
+            <button
+              data-set-theme="halloween"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🎃 halloween
+            </button>
+            <button
+              data-set-theme="forest"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🌲 forest
+            </button>
+            <button
+              data-set-theme="aqua"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🐟 aqua
+            </button>
+            <button
+              data-set-theme="luxury"
+              class="btn btn-outline btn-primary m-3"
+            >
+              💎 luxury
+            </button>
+            <button
+              data-set-theme="fantasy"
+              class="btn btn-outline btn-primary m-3"
+            >
+              🧚‍♀️ fantasy
+            </button>
+            <div class="modal-action">
+              <label for="my-modal-2" class="btn btn-primary"> Close </label>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="resume">
         <div class="container">
           <div class="resume__block">
